<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_disconnect">Disconnect</string>
    <string name="label_connect">Connect to Twitter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_tweet">Tweet</string>
    <string name="menu_mentions">"@"</string>
    <string name="menu_dm">DM</string>
    <string name="menu_config">Config</string>
    <string name="title_activity_tweet">TweetActivity</string>
    <string name="title_activity_config">Config Twitter Account</string>
    <string name="twitter_not_connected">Twitter not connected</string>
    <string name="empty_list_message">Waiting for tweets!</string>
    <string name="hintTweet">Tweet something...</string>
    <string name="tweet">Tweet</string>
    <string name="attachImage">Attach Image</string>
    <string name="title_activity_direct_messages">DirectMessagesActivity</string>
    <string name="title_activity_mentions">MentionsActivity</string>
    <string name="camera">Camera</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="emptySearch">Nothing found...</string>
    <string name="themeLigth">Theme Ligth</string>
    <string name="themeDark">Theme Dark</string>
    <string name="themeApp">Theme App (default)</string>
    
</resources>