<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_home"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/menu_tweet"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_tweet"/>
    <item
        android:id="@+id/menu_mentions"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_mentions"/>
    <item
        android:id="@+id/menu_dm"
        android:icon="@android:drawable/ic_dialog_email"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_dm"/>
    <item
        android:id="@+id/menu_config"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_config"/>

</menu>